# D2Q9LBM-GPU

./: README.md
docs/: codeStructure.txt  directoryStructure.txt  version
scripts/: buildAll.sh  cleanBuild.sh  cleanVtkData.sh
scripts/cudaLib/: cleanBuild.sh
src/: CMakeLists.txt
src/cudaLib/: CMakeLists.txt
src/cudaLib/basic/: fluid.cpp  fluid.hpp  gpuOperations.cu  gpuOperations.cuh  shape.cpp  shape.hpp  solver.cpp  solver.hpp  userDefine.hpp
src/cudaLib/helpers/: cudaHelper.cuh  cudaMathHelper.cuh
src/cudaLib/kernels/: LBMkernel.cu  LBMkernel.cuh
src/cudaLib/kernelsOverset/: oversetCoarseKernel.cu  oversetCoarseKernel.cuh  oversetFineKernel.cu  oversetFineKernel.cuh
src/src/: matrixSolver.cpp  matrixSolver.hpp  rawDataWriter.cpp  rawDataWriter.hpp  vtkWriter.cpp  vtkWriter.hpp
src/test/: testOversetGrid.cpp
